tests/paczka1/fuzzy1/16848672.err
Error in line 5: 8cR1fvqO A24 10,9
Error in line 12: 7gMF A461 54,4
Error in line 20: Zq89y2YxFR A750 74,5
Error in line 40: SF6B4HOV A461 -3,0
